# clitest

./: CHANGELOG.md  Cargo.toml  README.md  default.nix  rust-toolchain.toml
.github/workflows/: build.yml  mdbook.yml
crates/clitest/: Cargo.toml  README.md
crates/clitest-integration/: Cargo.toml
crates/clitest-integration/src/: testing.rs
crates/clitest-integration/tests/: integration_tests.rs
crates/clitest-lib/: Cargo.toml
crates/clitest-lib/src/: command.rs  failure.rs  lib.rs  output.rs  script.rs  term.rs  util.rs
crates/clitest-lib/src/parser/: mod.rs  v0.rs
crates/clitest-lib/src/parser/v0/: mod.rs  parse.rs  segment.rs
crates/clitest-mdbook/: Cargo.toml
crates/clitest-mdbook/src/: main.rs
crates/clitest/src/: main.rs
doc/: book.toml
doc/src/: SUMMARY.md  advanced-features.md  basic-usage.md  control-structures.md  environment.md  getting-started.md  grok-patterns.md  installation.md  introduction.md  overview.md  pattern-matching.md  quoting.md  reference.md
examples/: background-server.cli
highlighting/: functional-tests-0.0.1.vsix  functional-tests.tmLanguage.json  install.sh  language-configuration.json  package.json
src/: command.rs  lib.rs  main.rs  script.rs  term.rs  util.rs
src/parser/: mod.rs  v0.rs
tests/: integration_tests.rs
tests/v0/: all_constructs.cli  all_constructs.out  ansi.cli  ansi.out  any.cli  any.out  background.cli  background.out  background_early_exit.cli  background_early_exit.out  basic_parse.cli  basic_parse.out  capture.cli  capture.out  defer.cli  defer.out  defer_multiple.cli  defer_multiple.out  empty.cli  empty.out  empty2.cli  empty2.out  empty3.cli  empty3.out  errors.cli  errors.out  escaping.cli  escaping.out  exit.cli  exit.out  file_system.cli  file_system.out  for.cli  for.out  if.cli  if.cli_  if.out  if_pattern.cli  if_pattern.out  ignore.cli  (+21 more)
tests/v0-fail/: any.cli  any.out  backandforeground.cli  backandforeground.out  background.cli  background.out  choice.cli  choice.out  complex_pattern_mismatch.cli  complex_pattern_mismatch.out  exit_fail.cli  exit_fail.out  exit_mismatch.cli  exit_mismatch.out  expect_mismatch.cli  expect_mismatch.out  foreground.cli  foreground.out  ignore.cli  ignore.out  invalid_header.cli  invalid_header.out  long_mismatch.cli  long_mismatch.out  no_match.cli  no_match.out  not.cli  not.out  optional.cli  optional.out  out_of_order.cli  out_of_order.out  reject.cli  reject.out  repeat.cli  repeat.out  sequence.cli  sequence.out  timeout.cli  timeout.out  (+8 more)
tests/v0/include/: included.cli
tools/mdbook-clitest/: Cargo.toml
tools/mdbook-clitest/src/: main.rs
