[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.24" # Update versions below as well

[workspace.dependencies]
clitest-lib = { path = "crates/clitest-lib", version = "0.1.24" }

clap = "4.5.40"
derive-io = "=0.5.0"
derive_more = "2"
dirs = "6"
dunce = "1.0.3"
grok = "2.1"
keepcalm = "0.4"
mdbook = "0.4.51"
onig = { version = "6.5", default-features = false }
pathdiff = "0.2.3"
pretty_assertions = "1"
semver = "1.0.17"
serde = "1"
serde_json = "1.0.96"
serde_yaml = "0.9"
shellish_parse = "2"
signal-child = "1"
tempfile = "3"
termcolor = "1"
termsize = "0.1"
thiserror = "2"
toml = "0.8"
unflatter = "0.1"
unicode-segmentation = "1.12"
unicode-width = "0.2"
utf8-supported = "0.1"
