[package]
name = "clitest-lib"
license = "MIT/Apache-2.0"
version = "0.1.23"
authors = ["Matt Mastracci <matthew@mastracci.com>"]
edition = "2024"
description = "CLI-based testing library."
repository = "https://github.com/mmastrac/clitest"
readme = "../../README.md"

[dependencies]
clap = { workspace = true, features = ["derive"] }
shellish_parse.workspace = true
thiserror.workspace = true
grok.workspace = true
onig.workspace = true
derive_more = { workspace = true, features = ["display", "debug", "is_variant", "unwrap"] }
termcolor.workspace = true
termsize.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
serde_json.workspace = true
unicode-width.workspace = true
unicode-segmentation.workspace = true
dirs.workspace = true
pathdiff.workspace = true
toml.workspace = true
serde_yaml.workspace = true
signal-child.workspace = true
utf8-supported.workspace = true
tempfile.workspace = true
keepcalm.workspace = true
derive-io.workspace = true
unflatter.workspace = true
dunce.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[target.'cfg(windows)'.dependencies]
win32job = "2"
tlhelp32 = "1"
windows-sys = { version = "0.59.0", features = ["Win32_System_Threading"] }

[lib]
name = "clitest_lib"
path = "src/lib.rs" 
