[package]
name = "clitest-lib"
license = "MIT/Apache-2.0"
version.workspace = true
authors = ["Matt Mastracci <matthew@mastracci.com>"]
edition = "2024"
description = "CLI-based testing library."
repository = "https://github.com/mmastrac/clitest"
readme = "../../README.md"

[features]
default = ["onig"]

fancy-regex = ["grok/fancy-regex"]
onig = ["grok/onig"]

[dependencies]
shellish_parse.workspace = true
thiserror.workspace = true
grok.workspace = true
derive_more = { workspace = true, features = ["display", "debug", "error", "is_variant", "unwrap"] }
termcolor.workspace = true
termsize.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
unicode-width.workspace = true
unicode-segmentation.workspace = true
dirs.workspace = true
signal-child.workspace = true
utf8-supported.workspace = true
tempfile.workspace = true
keepcalm.workspace = true
derive-io.workspace = true
dunce.workspace = true
humantime.workspace = true
fast-strip-ansi.workspace = true
linktime.workspace = true
scattered-collect.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[target.'cfg(windows)'.dependencies]
win32job = "2.0.3"
tlhelp32 = "1"
windows-sys = { version = "0.61.2", features = ["Win32_System_Threading"] }

[lib]
name = "clitest_lib"
path = "src/lib.rs" 
