[package]
name = "clitest-mdbook"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
mdbook = "0.4"
clitest-lib = { path = "../clitest-lib" }
serde_json = "1.0.96"
clap = { version = "4.3.12", features = ["cargo", "wrap_help"] }
semver = "1.0.17"

[[bin]]
name = "mdbook-clitest"
path = "src/main.rs" 