[package]
name = "clitest-mdbook"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
mdbook.workspace = true
clitest-lib.workspace = true
serde_json.workspace = true
clap = { workspace = true, features = ["cargo", "wrap_help"] }
semver.workspace = true

[[bin]]
name = "mdbook-clitest"
path = "src/main.rs" 
