[package]
name = "clitest"
license = "MIT/Apache-2.0"
version = "0.1.21"
authors = ["Matt Mastracci <matthew@mastracci.com>"]
edition = "2024"
description = "CLI-based testing."
repository = "https://github.com/mmastrac/clitest"
readme = "../../README.md"

default-run = "clitest"

[dependencies]
clitest-lib = { path = "../clitest-lib" }
clap = { version = "4.5", features = ["derive"] }
termcolor = "1"
dunce = "1.0.3"
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

[[bin]]
name = "clitest"
path = "src/main.rs" 