[package]
name = "clitest"
license = "MIT/Apache-2.0"
version = "0.1.23"
authors = ["Matt Mastracci <matthew@mastracci.com>"]
edition = "2024"
description = "CLI-based testing."
repository = "https://github.com/mmastrac/clitest"
readme = "../../README.md"

default-run = "clitest"

[dependencies]
clitest-lib.workspace = true
clap = { workspace = true, features = ["derive"] }
termcolor.workspace = true
dunce.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true

[[bin]]
name = "clitest"
path = "src/main.rs" 
